--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "codegen": "graphql-codegen"
   },
   "dependencies": {
+    "@sitecore-marketplace-sdk/client": "^0.2.0",
+    "@sitecore-marketplace-sdk/xmc": "^0.2.1",
     "graphql": "^16.9.0",
     "next": "^14.2.5",
     "react": "^18.3.1",
